	- Changes Introduced In 0.2.2
	- Changes Introduced In 0.2.1
	- Changes Introduced In 0.2.0
	- Changes Introduced In 0.1.3
	- Changes Introduced In 0.1.2
	- Changes Introduced In 0.1.1
    - Changes Introduced In 0.1.0

****************************************************
\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\

**Changes introduced in 0.3.7

[Feature]	Combined templates
[Fix]		Resolved database error during user invitation registration
[Fix]		Resolved issue with editing template port orientation and enclosure tolerance
[Fix]		Resolved error during new user registration
[Fix]		Resolved error loading empty floorplan
[Enhance]	Sort available templates by category name and then template name

**Changes introduced in 0.3.6

[Enhance]	Added camera floorplan object

**Changes introduced in 0.3.5

[Enhance]	Added connection overwrite confirmation
[Fix]		Fixed issue with overwriting port connections
[Fix]		Fixed issue with port selection not populating when object is selected in Explore
[Fix]		AppID not sending on entitlement update

**Changes introduced in 0.3.4

[Enhance]	Minimize self-hosted installation fields and accomodate virtual appliance deployment

**Changes introduced in 0.3.3

[Fix]		Only allow cabinets to be added to diagram
[Fix]		Occasionally incorrect port tree when connecting managed cable end
[Fix]		"CableB ID" exporting as "None"
[Fix]		Multimode cables not rendering in cable path
[Fix]		Object name not rendering properly in cable path when scanning cable end connected to insert
[Enhance]	Zoom floorplans with mouse wheel
[Enhance]	User defined path finder constraints

**Changes introduced in 0.3.2

[Fix]		Floorplan objects not dropping or updating on certain parts of floorplan
[Fix]		Added missing clear trunk feature to selected object Actions menu ("Build->Environment" page)
[Enhance]	Pan and zoom floorplan image to fit window when initially loaded
[Enhance]	Pathfinder paths display in new format